# Data-Science-Exploration

./: .gitignore
Feature-Selection/: README.md  feature_selection.ipynb
math-for-ml/: statistics.ipynb
mcp_related/: pyproject.toml
mcp_related/fastapi_mcp/: config.json  exp.ipynb  main.py
mcp_related/langchain_mcp_adapters/: langchain_mcp_exp.ipynb
mcp_related/mcp_use_library/: airbnb_config.json  mcp_use_exp.ipynb
mcp_related/mcp_use_library/output/: restarant.txt
mcp_related/using_docker/: Dockerfile  client_sse.py  client_stdio.py  exp.ipynb  weather_server.py
preprocessing/: Untitled.ipynb
